# DAGnosis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: python-app.yml
conf/: config.yaml  config_adult_income.yaml
conf/conformal_predictor/: CQR.yaml
conf/data_generator/: default.yaml
experiments/adult/: proportion_flagging.py  train_test_adult.py
experiments/adult/artifacts_adult/: artifacts_final_seed_0  artifacts_final_seed_1  artifacts_final_seed_2  artifacts_final_seed_3  artifacts_final_seed_4
experiments/synthetic/: generate_data.py  parse_metrics.py  test_cp.py  train_cp.py
lightning_logs/version_0/: hparams.yaml
notebooks/: localization.ipynb
scripts/: debug_linear.sh  run_linear.sh  run_mlp.sh
src/dagnosis/conformal/: conformal_evaluator.py  conformal_predictor.py  significance_correction.py
src/dagnosis/dag_learner/: dsl.py  extractor.py  linear.py  notears.py  simulate.py  utils.py
src/dagnosis/dag_learner/dagma/: linear.py  nonlinear.py  utils.py
src/dagnosis/data/: data_generator.py  datamodule.py
src/dagnosis/dcai/: conformal_pipeline.py
src/dagnosis/representation/: representation_mapper.py
src/dagnosis/utils/: conformal.py  dag.py  data.py  logger.py  metrics.py  plotting.py  seed.py
tests/: test_confidence_correction.py  test_conformal_evaluator.py  test_conformal_predictor.py  test_dag_extractor.py  test_dag_utils.py  test_hydra.py  test_pipeline.py  test_representation.py
